fixed card description spacing

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -70,21 +70,21 @@ main {
 }
 
 .card h2{
-    margin: 10px;
+    margin: 0px 10px;
     border: 1px solid white;
     border-radius: 5px;
     text-align: center;
     color: var(--accent);
     position: relative;
-    top: -25px;
+    top: -15px;
     background-color: black;
-    flex-basis: 0%;
 }
 
 .card p{
     margin: 10px;
     font-size: 12px;
     color: white;
+    flex-basis: 100;
 }
 
 
